tests/fsharp/typecheck/sigs/neg133.bsl

neg133.fs(4,19,4,22): typecheck error FS3521: Invalid member declaration. The name of the member is missing or has parentheses.

neg133.fs(7,19,7,27): typecheck error FS3521: Invalid member declaration. The name of the member is missing or has parentheses.

neg133.fs(28,7,28,17): typecheck error FS0026: This rule will never be matched

neg133.fs(34,7,34,17): typecheck error FS0026: This rule will never be matched

neg133.fs(40,7,40,17): typecheck error FS0026: This rule will never be matched

neg133.fs(46,7,46,20): typecheck error FS0026: This rule will never be matched

neg133.fs(52,7,52,37): typecheck error FS0026: This rule will never be matched

neg133.fs(57,7,57,19): typecheck error FS0026: This rule will never be matched

neg133.fs(63,7,63,19): typecheck error FS0026: This rule will never be matched

neg133.fs(69,7,69,21): typecheck error FS0026: This rule will never be matched

neg133.fs(76,10,76,11): typecheck error FS0957: One or more of the declared type parameters for this type extension have a missing or wrong type constraint not matching the original type constraints on 'A<_,_,_>'

neg133.fs(76,10,76,11): typecheck error FS0957: One or more of the declared type parameters for this type extension have a missing or wrong type constraint not matching the original type constraints on 'A<_,_,_>'
